fixed some wrapping text issues

--- a/frontend/src/components/character/char.css
+++ b/frontend/src/components/character/char.css
@@ -35,7 +35,7 @@
 .levelback {
     /* background-color: black; */
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     border-radius: 50%;
     border: 2px solid black;
     text-align: center;
@@ -76,4 +76,6 @@
     color: inherit;
     font: inherit;
     background: none;
+    overflow-wrap: break-word;
+    inline-size: inherit;
 }
